# cloudnetpy

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .readthedocs.yml  .travis.yml  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  _typos.toml  bump-version  pyproject.toml  release-version  requirements.txt  setup.py
.github/workflows/: docs.yaml  publish.yml  test.yml
cloudnet/: atmos.py  categorize.py  config.py  constants.py  droplet.py  ncf.py  utils.py
cloudnet/categorize/: categorize.py
cloudnet/temp/: category_bits.py
cloudnet/utils/: ncf.py
cloudnetpy/: __init__.py  atmos.py  categorize.py  ceilo.py  classify.py  cli.py  cloudnetarray.py  concat_lib.py  config.py  constants.py  datasource.py  droplet.py  exceptions.py  lwc.py  metadata.py  mira.py  ncf.py  output.py  plot_meta.py  plotting.py  radar.py  rpg.py  utils.py  version.py
cloudnetpy/categorize/: __init__.py  atmos.py  atmos_utils.py  attenuation.py  categorize.py  classify.py  containers.py  datasource.py  disdrometer.py  droplet.py  falling.py  freezing.py  insects.py  itu.py  lidar.py  melting.py  model.py  mwr.py  radar.py
cloudnetpy/categorize/attenuations/: __init__.py  gas_attenuation.py  liquid_attenuation.py  melting_attenuation.py  rain_attenuation.py
cloudnetpy/categorize/tests/: categorize_file_test.py  test_atmos.py  test_classify.py
cloudnetpy/disdronator/: __init__.py  lpm.py  parsivel.py  process.py  rd80.py  utils.py
cloudnetpy/instruments/: __init__.py  basta.py  bowtie.py  campbell_scientific.py  ceilo.py  ceilometer.py  cl61d.py  cloudnet_instrument.py  copernicus.py  da10.py  disdrometer.py  fd12p.py  galileo.py  general.py  hatpro.py  instruments.py  jenoptik.py  lufft.py  mira.py  mrr.py  nc_lidar.py  nc_radar.py  pollyxt.py  radiometrics.py  rain_e_h3.py  rpg.py  rpg_data.py  rpg_header.py  rpg_l0.py  rpg_reader.py  toa5.py  vaisala.py  weather_radar.py  weather_station.py
cloudnetpy/instruments/disdrometer/: __init__.py  common.py  parsivel.py  rd80.py  thies.py
cloudnetpy/instruments/tests/: calibrated_data_test.py  calibrated_files_test.py  raw_files_test.py
cloudnetpy/model_evaluation/: __init__.py  file_handler.py  metadata.py  model_metadata.py  pytest.ini  utils.py
cloudnetpy/model_evaluation/plotting/: plot_meta.py  plot_tools.py  plotting.py
cloudnetpy/model_evaluation/products/: advance_methods.py  grid_methods.py  model_products.py  observation_products.py  product_resampling.py  tools.py
cloudnetpy/model_evaluation/statistics/: statistical_methods.py
cloudnetpy/plotting/: __init__.py  legacy_meta.py  meta_for_old_files.py  plot_meta.py  plotting.py
cloudnetpy/products/: __init__.py  bits.py  categorize.py  classification.py  def_Frisch.py  der.py  drizzle.py  drizzle_error.py  drizzle_tools.py  droplet.py  edr.py  epsilon.py  epsilon_lidar.py  epsilon_radar.py  ier.py  iwc.py  lwc.py  mwr_multi.py  mwr_single.py  mwr_tools.py  ncf.py  product_tools.py  reff_Frisch.py  test_categorize.py  test_class.nc  test_classification.py  test_iwc.py  test_lwc.py
cloudnetpy/products/tests/: iwc_test.py  product_files_test.py  test_iwc.py  test_lwc.py
cloudnetpy/quality/: __init__.py  data_quality_config.ini  metadata_config.ini  quality.py
cloudnetpy/tests/: categorize_file_test.py  test_classify.py  test_utils.py
docs/: .gitignore  Makefile  requirements.txt
docs/doctrees/: api.doctree  environment.pickle  index.doctree  installation.doctree  overview.doctree  quickstart.doctree
docs/html/: .buildinfo  api.html  genindex.html  index.html  installation.html  objects.inv  overview.html  py-modindex.html  quickstart.html  search.html  searchindex.js
docs/html/_modules/: atmos.html  categorize.html  classify.html  droplet.html  index.html  lwc.html  ncf.html  utils.html
docs/html/_sources/: api.rst.txt  index.rst.txt  installation.rst.txt  measurements.rst.txt  overview.rst.txt  (+1 more)
docs/scripts/: quickstart_download  quickstart_generate
docs/source/: api.rst  cli.rst  cloudnet.rst  conf.py  conf.py~  fileformat.rst  guide.rst  index.rst  index.rst~  installation.rst  modules.rst  ncf.rst  overview.rst  quickstart.rst  testing.rst
docs_zh/: .gitignore  GETTEXT_I18N.md  Makefile  README.md  README_ZH.md  make.bat  requirements.txt
docs_zh/source/: api.rst  conf.py  fileformat.rst  guide.rst  index.rst  installation.rst  overview.rst  quickstart.rst
paper/: paper.bib  paper.md
specs/: weather-station.md
tests/: __init__.py  api.py  conftest.py  data_qc.py  data_quality_config.ini  e2e_test.py  meta_qc.py  old_conftest.py  qc_testing.py  quality_control.py  run_example_processing_and_tests.py  run_testcase_processing.py  test.py  test_atmos.py  test_cat.py  test_classify.py  test_data.py  test_data_classification.nc  test_data_drizzle.nc  test_data_iwc.nc  test_data_lwc.nc  test_metadata.py  test_utils.py  utils.py
tests/data_quality/: conftest.py  data_quality_config.ini  data_quality_test.py  ref_quantity_config.ini  test_data.py
tests/meta/: conftest.py  metadata_config.ini  test_calibrated.py  test_categorize.py  test_metadata.py  test_products.py  test_raw.py
tests/product_tests/: iwc_test.py
tests/reference_data/: reference_data.py
tests/source_data/: ecmwf_model.nc  hatpro_mwr.nc  raw_chm15k_lidar.nc  raw_mira_radar.mmclx
tests/unit/: all_products_fun.py  conftest.py  lidar_fun.py  radar_fun.py  test_atmos.py  test_atmos_utils.py  test_basta.py  test_binning.py  test_bowtie.py  test_categorize.py  test_ceilo.py  test_ceilometer.py  test_cl61d.py  test_classification.py  test_classify.py  test_cloudnet_instrument.py  test_cloudnetarray.py  test_concat_lib.py  test_copernicus.py  test_cs135.py  test_da10.py  test_datasource.py  test_def_Frisch.py  test_der.py  test_disdrometer.py  test_drizzle.py  test_drizzle_error.py  test_droplet.py  test_epsilon.py  test_epsilon_lidar.py  test_falling.py  test_fd12p.py  test_freezing.py  test_galileo.py  test_general.py  test_hatpro.py  test_hatpro_l1c.py  test_ief.py  test_ier.py  test_insects.py  (+26 more)
(+142 files in other folders)
